--- a/Lab1 Naive Bayes Classifier.Rmd
+++ b/Lab1 Naive Bayes Classifier.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Work breakdown
 
--   *Name1 Surname1*:
+-   *VItalii Lutsyk*:
 -   *Name2 Surname2*:
 -   *Name3 Surname3*:
 
@@ -100,6 +100,7 @@ library(tidytext)
 library(readr)
 library(dplyr)
 library(ggplot2)
+library(wordcloud)
 ```
 
 ## Outline of the work
@@ -142,12 +143,12 @@ library(ggplot2)
 
 ```{r}
 list.files(getwd())
-list.files("data/0-authors")
+list.files("3-sentiment")
 ```
 
 ```{r}
-test_path <- "data/0-authors/test.csv"
-train_path <- "data/0-authors/train.csv"
+test_path <- "3-sentiment/test.csv"
+train_path <- "3-sentiment/train.csv"
 
 stop_words <- read_file("stop_words.txt")
 # https://stackoverflow.com/questions/27195912/why-does-strsplit-return-a-list
@@ -163,7 +164,7 @@ test <-  read.csv(file = test_path, stringsAsFactors = FALSE)
 ```{r}
 # note the power functional features of R bring us! 
 tidy_text <- unnest_tokens(train, 'splitted', 'text', token="words") %>%
-             filter(!splitted %in% stop_words)
+             filter(!splitted %in% splitted_stop_words)
 
 tidy_text %>% count(splitted,sort=TRUE)
 ```
@@ -175,11 +176,42 @@ start processing it. R has very powerful tools to make nice plots and
 visualization. Show what are the most common words for negative and
 positive examples as a histogram, word cloud etc. Be creative!
 
+
+```{r}
+positive_examples <- tidy_text %>% filter(sentiment == "positive")
+negative_examples <- tidy_text %>% filter(sentiment == "negative")
+positive_word_counts <- positive_examples %>% count(splitted, sort = TRUE)
+negative_word_counts <- negative_examples %>% count(splitted, sort = TRUE)
+
+
+
+ggplot(positive_word_counts %>% slice_max(n, n = 10),aes(x = reorder(splitted, n), y = n)) +
+  geom_bar(stat = "identity", fill = "blue") +
+  coord_flip() +
+  labs(title = "Top Words in Positive Examples", x = "Words", y = "Frequency")
+
+ggplot(negative_word_counts %>% slice_max(n, n = 10), aes(x = reorder(splitted, n), y = n)) +
+  geom_bar(stat = "identity", fill = "red") +
+  coord_flip() +
+  labs(title = "Top Words in Negative Examples", x = "Words", y = "Frequency")
+
+
+
+wordcloud(words = positive_word_counts$splitted, freq = positive_word_counts$n, 
+          max.words = 100, colors = "blue", random.order = FALSE)
+
+wordcloud(words = negative_word_counts$splitted, freq = negative_word_counts$n, 
+          max.words = 100, colors = "red", random.order = FALSE)
+
+```
+
+
+
 ## Classifier implementation
 
 ```{r}
 naiveBayes <- setRefClass("naiveBayes",
-                          
+          
        # here it would be wise to have some vars to store intermediate result
        # frequency dict etc. Though pay attention to bag of words! 
        fields = list(),
